Migrate rest of the endpoint tests